# slamInPractice

./: .gitmodules  CMakeLists.txt  README.md
cmake/: eigen.cmake  sophus.cmake
project/: CMakeLists.txt
project/1_matrix_operation/: CMakeLists.txt
project/1_matrix_operation/src/: main.cpp
project/2_geometry/: CMakeLists.txt
project/2_geometry/src/: main.cpp
project/3_lie_algebra/: CMakeLists.txt
project/3_lie_algebra/src/: main.cpp
script/: create_build_directory.bat
